[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]
